...
            return ""
        }
    }
    
    override func viewDidLoad() {
        super.viewDidLoad()
        self.title = "Play"
        
        game.auth {
            if let user = self.game.user {
                self.userLabel.text = user.uid
            }
        }
...
